--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,15 @@ header ul{
     padding: 0;
 }
 
+.button_1{
+    height:38px;
+    background:#04666d;
+    color:#ffffff;
+    border:0;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
 header li{
     float: left;
     display: inline;
@@ -56,6 +65,78 @@ header nav{
 }
 
 header .highlight, header .current a{
-    color: #0eabc7;
+    color: rgb(23, 158, 158);
     font-weight: bold;
+}
+
+header a:hover{
+    color: cyan ;
+    font-weight: bold;
+}
+
+#showcase{
+    max-height: 400px;
+    background:url('../images/showcase.jpg') no-repeat 0 -400px;
+    text-align: :center;
+    height: 400px;
+    color: #ffffff;
+
+}
+
+#showcase h1{
+    margin-top:100px;
+    font-size:50px;
+    margin-bottom:10px;
+    color:#f4f4f4;
+}
+
+#showcase p{
+    font-size: 20px;
+    color: #f4f4f4;
+
+}
+
+#newsletter{
+    padding:15px;
+    color: #ffffff;
+    background: #35424a;
+}
+
+#newsletter h1{
+    float:left;
+
+}
+
+#newsletter form{
+    float:right;
+    margin-top:15px;
+}
+
+#newsletter input[type="email"]{
+    padding:4px;
+    height: 25px;
+    width: 250px;
+}
+
+/*boxes*/
+
+#boxes{
+    margin-top:30px;
+}
+
+#boxes .box{
+    float:left;
+    text-align: center;
+    width:30%;
+    padding: 15px;
+}
+
+
+
+footer{
+    padding:20px;
+    margin-top: 20px;
+    color: #ffffff;
+    background-color: #35424a;
+    text-align: center; 
 }
